5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1594_1806.log
== TEST (2019-03-24 15:32:27) 
-- CODE:
from math import*
n = int(input("Digite o numero de pessoas: "))
p =1 - ((factorial(365)/(factorial(365-n)))*(1/(365**n))
-- ERROR:
File "XXXX", line 4
    
                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 15:32:50) 
-- CODE:
from math import*
n = int(input("Digite o numero de pessoas: "))

-- ERROR:
File "XXXX", line 4
    
                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:27) 
-- CODE:
from math import*
n = int(input("Digite o numero de pessoas: "))
a = factorial(365)/factorial(365-n)
b = 1/(365**n)
p = 1 - (a * b)
print(p)

-- OUTPUT:
0.1670247888380645
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:50) 
-- CODE:
from math import*
n = int(input("Digite o numero de pessoas: "))
a = factorial(365)/factorial(365-n)
b = 1/(365**n)
p = (1 - a * b) * 100
print(round(p,2)

-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:56) 
-- CODE:
from math import*
n = int(input("Digite o numero de pessoas: "))
a = factorial(365)/factorial(365-n)
b = 1/(365**n)
p = (1 - a * b) * 100
print(round(p,2))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:50:04) 
-- CODE:
from math import*
n = int(input("Digite o numero de pessoas: "))
a = factorial(365)/factorial(365-n)
b = 1/(365**n)
p = (1 - a * b) * 100
print(round(p,2))

-- EXECUTION TIME:
0.182973
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
